--- a/styles/styles.css
+++ b/styles/styles.css
@@ -66,7 +66,7 @@ input[type="radio"] {
 button[type="submit"] {
     background-color: #FF0000; 
     color: #fff;
-    padding: 10px 20px;
+    padding: 20px 20px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -84,3 +84,27 @@ button[type="submit"]:hover {
     border-radius: 5px;
 }
 
+@media (max-width: 767px) {
+    body {
+        font-size: 16px;
+    }
+    main {
+        padding: 10px;
+    }
+    article {
+        margin: 20px;
+    }
+    label {
+        font-size: 18px;
+    }
+    button[type="submit"] {
+        padding: 8px 16px;
+    }
+    .results {
+        margin-top: 10px;
+        padding: 10px;
+    }
+    h3{
+        font-size: 20px;
+    }
+}
