--- a/styles/styles.css
+++ b/styles/styles.css
@@ -42,7 +42,7 @@ h3 {
     margin: 0;
     margin-bottom: 10px;
     text-align: center;
-    color:black;
+    color:rgb(182, 177, 177);
 }
 
 label {
@@ -73,7 +73,7 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-    background-color:#ff6666; 
+    background-color:#e7a1a1; 
 }
 
 .results {
