--- a/styleprinc.css
+++ b/styleprinc.css
@@ -22,15 +22,26 @@
     color: rgba(181, 178, 178, 0.964);
   }
   
-  .button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px 20px;
-    color: white;
-    text-size-adjust: 60px;
-    border: none;
-    border-radius: 5px;
-    font-size: 18px;
-    cursor: pointer;
-  }
+ .button {
+  display: block;
+  margin: 0px;
+  padding: 8px 16px;
+  font-size: 18px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #070707;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+}
+
+.button:hover {background-color: #A9B4C2}
+
+.button:active {
+  background-color: #A9B4C2;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
