--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,7 +30,7 @@ section {
 
 
 article {
-    background-color: rgba(68, 68, 68, 0.5); 
+    background-color: rgba(22, 21, 21, 0.7); 
     padding: 15px;
     margin: 40px 40px;
     border: 1px solid #111111d4;
@@ -39,19 +39,23 @@ article {
 
 h3 {
     font-size: 28px;
+    font-variant: small-caps;
     margin: 0;
     margin-bottom: 10px;
     text-align: center;
-    color:rgb(182, 177, 177);
+    color:   #EEF0F2;
 }
 
 label {
     display: block;
     margin: 20px 20px;
     text-align: center;
-    font-size: 25px;
+    font-weight: 700;
+    font-size: 28px;
+    font-variant: small-caps;
     justify-content: center;
-    color: #fff;
+    color:   #e93e3e;
+    
 }
 
 label:hover {
@@ -64,7 +68,7 @@ input[type="radio"] {
 }
 
 button[type="submit"] {
-    background-color: #FF0000; 
+    background-color: #74121D; 
     color: #fff;
     padding: 20px 20px;
     border: none;
@@ -73,7 +77,7 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-    background-color:#e7a1a1; 
+    background-color:#BB3A47; 
 }
 
 .results {
@@ -95,7 +99,7 @@ button[type="submit"]:hover {
         margin: 20px;
     }
     label {
-        font-size: 18px;
+        font-size: 22px;
     }
     button[type="submit"] {
         padding: 8px 16px;
@@ -105,6 +109,6 @@ button[type="submit"]:hover {
         padding: 10px;
     }
     h3{
-        font-size: 20px;
+        font-size: 24px;
     }
 }
